--- a/index.html
+++ b/index.html
@@ -66,9 +66,9 @@
             let n = String(document.getElementById("name").value);
             let a = Number(document.getElementById("weight").value);
             let b = Number(document.getElementById("height").value);
-            b = b / 100;
+            b =  b / 100;
             let kq;
-            let BMI = a / (b * b);
+            let BMI = a / Math.pow(b, 2);
             if (BMI < 18.5) {
                 console.log('Nhẹ cân (CED) ' + Math.round(BMI * 100) / 100);
                 kq = 'Nhẹ cân (CED) ';
@@ -112,8 +112,8 @@
             // bt2: lưu data
             window.localStorage.setItem("name", n);
             window.localStorage.setItem("weight", a);
-            window.localStorage.setItem("height", b);
-
+            window.localStorage.setItem("height",  b * 100);
+           
 
             // for(let key in data){
             document.getElementById("test").innerHTML = html;
