--- a/index.html
+++ b/index.html
@@ -110,9 +110,9 @@
             // console.log(localBMI);
 
             // bt2: lưu data
-            window.localStorage.setItem("name", n);
-            window.localStorage.setItem("weight", a);
-            window.localStorage.setItem("height",  b * 100);
+            localStorage.setItem("name", n);
+            localStorage.setItem("weight", a);
+            localStorage.setItem("height",  b * 100);
            
 
             // for(let key in data){
