--- a/index.html
+++ b/index.html
@@ -134,6 +134,7 @@
             document.getElementById('myform').reset();
         }
         function render(){
+            // Xuất local ra màn hình
             var n = localStorage.getItem("name");
             document.getElementById("name").value = n;
             var a = localStorage.getItem("weight");
