--- a/index.html
+++ b/index.html
@@ -135,11 +135,11 @@
         }
         function render(){
             // Xuất local ra màn hình
-            var n = localStorage.getItem("name");
+            let n = localStorage.getItem("name");
             document.getElementById("name").value = n;
-            var a = localStorage.getItem("weight");
+            let a = localStorage.getItem("weight");
             document.getElementById("weight").value = a;
-            var b = localStorage.getItem("height");
+            let b = localStorage.getItem("height");
             document.getElementById("height").value = b;
         }
     </script>
