--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
 
 <body>
     <h1>JAVASCRIPT</h1>
-    <form method="post" action="" id="myform" onsubmit="BMI()">
+    <form id="myform" onsubmit="BMI()">
         <div class="form__input">
             <h1>Tính chỉ số BMI của bạn</h1>
             <div class="form__input-form form__input--name">
